testsuite/tests/parser/should_fail/T19923b.hs
{-# OPTIONS_GHC T19923 #-}
module ShouldFail where
